kubernetes/apps/talos1018/adsb/skystats/app/db-deployment.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skystats-db
  labels:
    app.kubernetes.io/name: skystats-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: skystats-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: skystats-db
    spec:
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: postgres
          image: postgres:18
          volumeMounts:
            - name: skystats-db-data
              mountPath: /var/lib/postgresql/data
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            limits:
              cpu: "0.2"
              memory: "512Mi"
            requests:
              cpu: "0.02"
              memory: "128Mi"
      volumes:
        - name: skystats-db-data
          persistentVolumeClaim:
            claimName: skystats-db-data
