kubernetes/apps/talos1018/adsb/skystats/app/db-service.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: v1
kind: Service
metadata:
  name: skystats-db
spec:
  selector:
    app.kubernetes.io/name: skystats-db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
