kubernetes/apps/talos1018/adsb/skystats/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: skystats
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: ADSB
    gethomepage.dev/icon: mdi-airplane
    gethomepage.dev/name: Skystats
    gethomepage.dev/app: skystats
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "skystats.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: skystats
          port: 80
